--- a/zodiacs/templates/zodiacs/index.html
+++ b/zodiacs/templates/zodiacs/index.html
@@ -9,3 +9,12 @@
 <p>{{ invalid_input }}</p>
 <h3> {{ db_sign }} </h3> 
 <p>{{ db_sign.description }}</p>
+
+<div style="margin-top: 200px">
+    <p>Komentarz:</p>
+    <p>Chciałem, żeby poza działaniem też jakoś wyglądało, ale kompletnie utknąłem na kilka godzin na błędzie pokazywanym przez dockera.</p>
+    <p>Bootstrap działa na lokalnym venvie, ale w dockerze już zupełnie nie chce mimo wczytania freezowanych zależności.</p>
+    <code>ModuleNotFoundError: No module named 'bootstrap4'</code>
+    
+    
+</div>
