--- a/zodiacs/templates/zodiacs/index.html
+++ b/zodiacs/templates/zodiacs/index.html
@@ -1,20 +1,33 @@
-<h1>Sprawdzacz znaku zodiaku</h1>
+<!doctype html>
+<html lang="pl">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    </head>
+    <body>
+        <div class="row justify-content-center">
+            <div class="col-6 mt-5 card shadow">
+                
+                <h1 class="mt-4">Sprawdzacz znaku zodiaku</h1>
+                <hr class="mt-0 mb-4">
+                <form method="POST" action="{% url 'zodiacs:index' %}" class="form-group">
+                    <label for="date" class="form-label">Data urodzin: </label>
+                    <div class="input-group mb-3">
 
-<form method="POST" action="{% url 'zodiacs:index' %}">
-    {% csrf_token %}
-    <label for="date">Data urodzin: </label>
-    <input type="text" name="birthday" placeholder="dd/mm/rrrr">
-    <input type="submit" name="submit">
-</form>
-<p>{{ invalid_input }}</p>
-<h3> {{ db_sign }} </h3> 
-<p>{{ db_sign.description }}</p>
+                        {% csrf_token %}
+                        <input type="text" class="form-control" name="birthday" placeholder="dd/mm/rrrr">
+                        <input type="submit" name="submit" class="btn btn-success">
+                    </div>
+                </form>
+                <p>{{ invalid_input }}</p>
+                <h3 class="mt-4"> {{ db_sign }} </h3> 
+                <p class="pb-2">{{ db_sign.description }}</p>
+            </div>
+            
+        </div>
 
-<div style="margin-top: 200px">
-    <p>Komentarz:</p>
-    <p>Chciałem, żeby poza działaniem też jakoś wyglądało, ale kompletnie utknąłem na kilka godzin na błędzie pokazywanym przez dockera.</p>
-    <p>Bootstrap działa na lokalnym venvie, ale w dockerze już zupełnie nie chce mimo wczytania freezowanych zależności.</p>
-    <code>ModuleNotFoundError: No module named 'bootstrap4'</code>
-    
-    
-</div>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    </body>
+</html>
