--- a/zodiacs/templates/zodiacs/index.html
+++ b/zodiacs/templates/zodiacs/index.html
@@ -8,28 +8,27 @@
         <link rel="stylesheet" type="text/css" href="{% static 'zodiacs/style.css' %}">
     </head>
     <body>
+        
         <div class="row justify-content-center">
-            <div class="col-6 mt-5 card shadow">
-                
-                <h1 class="mt-4">Sprawdzacz znaku zodiaku</h1>
+            <div class="col-6 mt-5 pt-2 pb-2 card shadow border-0 bg-transparent">
+                <h3 class="mt-4">Sprawdzacz znaku zodiaku v.2</h1>
                 <hr class="mt-0 mb-4">
+                
                 <form method="POST" action="{% url 'zodiacs:index' %}" class="form-group">
-                    <label for="date" class="form-label">Data urodzin: </label>
+                    <label for="{{ form.birthday.id_for_label }}" class="mb-2">Data urodzin</label>
                     <div class="input-group mb-3">
-
                         {% csrf_token %}
-                        <input type="text" class="form-control" name="birthday" placeholder="dd/mm/rrrr">
-                        <input type="submit" name="submit" class="btn btn-success">
+                        {{ form.birthday }}
+                        <input type="submit" class="btn btn-success">
                     </div>
                 </form>
-                <p>{{ invalid_input }}</p>
-                <h3 class="mt-4"> {{ db_sign }} </h3> 
-                <p class="pb-2">{{ db_sign.description }}</p>
-            </div>
-            
+            <h3 class="pt-4"> {{ db_sign }} </h3> 
+            <p class="pb-2">{{ db_sign.description }}</p>
         </div>
 
+        
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     </body>
-</html>
+    </html>
+    
